major style update, removed all non i18n phrases from code (hopefully)...
student analytics labels are changeed to black for the white background.
style update removing most of the orange borders.
removed all of the non i18n phrases from the code so it should just be awaits
moved some of the untranslated strings into the i18n config file.
changed white spacing to make things more balanced (margins are now equal, for example).

NOTE: this is not finished, there are a few things that still need styling

--- a/frontend/src/config/i18n.config.json5
+++ b/frontend/src/config/i18n.config.json5
@@ -363,6 +363,54 @@
         'pt-PT': ''
     },
 
+    dob: {
+        'en-GB': 'Date of Birth',
+        'fr-FR': '',
+        'es-ES': '',
+        'it-IT': '',
+        'de-DE': '',
+        'ro-RO': '',
+        'pl-PL': '',
+        'tr-TR': '',
+        'pt-PT': ''
+    },
+
+    student_prog_chart: {
+        'en-GB': 'Overall progress charts for students display progress accross all lesson plans assigned to them are only updated after the GLP has been fully played and finished.',
+        'fr-FR': '',
+        'es-ES': '',
+        'it-IT': '',
+        'de-DE': '',
+        'ro-RO': '',
+        'pl-PL': '',
+        'tr-TR': '',
+        'pt-PT': ''
+    }
+
+    student_analytics: {
+        'en-GB': 'Student Analytics',
+        'fr-FR': '',
+        'es-ES': '',
+        'it-IT': '',
+        'de-DE': '',
+        'ro-RO': '',
+        'pl-PL': '',
+        'tr-TR': '',
+        'pt-PT': ''
+    },
+
+    student_name: {
+        'en-GB': 'Student Name',
+        'fr-FR': '',
+        'es-ES': '',
+        'it-IT': '',
+        'de-DE': '',
+        'ro-RO': '',
+        'pl-PL': '',
+        'tr-TR': '',
+        'pt-PT': ''
+    },
+
     username: {
         'en-GB': 'Username',
         'fr-FR': '',
