finished new styles for lesson manager + fixed bug for getGLP request

--- a/frontend/src/config/i18n.config.json5
+++ b/frontend/src/config/i18n.config.json5
@@ -1704,7 +1704,7 @@
     },
 
     lm_owner: {
-        'en-GB': 'Owner',
+        'en-GB': 'Owned by',
         'fr-FR': 'Propriétaire',
         'es-ES': 'Propietario',
         'it-IT': 'Proprietario',
