--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "eslint-plugin-babel": "5.3.0",
     "eslint-plugin-flowtype": "2.50.3",
     "eslint-plugin-import": "2.16.0",
-    "file-loader": "^3.0.1",
+    "file-loader": "3.0.1",
     "flow-bin": "0.96.0",
     "hard-source-webpack-plugin": "0.13.1",
     "json5-loader": "1.0.1",
@@ -81,13 +81,13 @@
     "webpack-dev-server": "3.3.1"
   },
   "dependencies": {
-    "@babel/runtime-corejs2": "^7.1.2",
+    "@babel/runtime-corejs2": "7.1.2",
     "@shopify/draggable": "^1.0.0-beta.5",
-    "chart.js": "^2.7.0",
-    "hyperscript": "^2.0.2",
-    "hyperscript-helpers": "^3.0.3",
-    "identicon.js": "^2.3.1",
-    "moment": "^2.22.2",
-    "tippy.js": "^3.0.3"
+    "chart.js": "2.7.0",
+    "hyperscript": "2.0.2",
+    "hyperscript-helpers": "3.0.3",
+    "identicon.js": "2.3.1",
+    "moment": "2.22.2",
+    "tippy.js": "3.0.3"
   }
 }
